--- a/l10n/bundle.l10n.es.json
+++ b/l10n/bundle.l10n.es.json
@@ -71,5 +71,7 @@
   "No CODEOWNERS file found in this workspace. [Create one](command:codeownersTeams.createCodeownersFile) or [learn more](command:codeownersTeams.openCodeownersDocs).": "No se encontró archivo CODEOWNERS en este espacio de trabajo. [Crea uno](command:codeownersTeams.createCodeownersFile) o [aprende más](command:codeownersTeams.openCodeownersDocs).",
   "List of team names that should be pinned to the top of the CODEOWNERS teams view.": "Lista de nombres de equipos que deben fijarse en la parte superior de la vista de equipos CODEOWNERS.",
   "Show CODEOWNERS information in the status bar for the currently open file.": "Mostrar información de CODEOWNERS en la barra de estado para el archivo actualmente abierto.",
-  "Show CODEOWNERS information when hovering over files in the explorer.": "Mostrar información de CODEOWNERS al pasar el cursor sobre archivos en el explorador."
+  "Show CODEOWNERS information when hovering over files in the explorer.": "Mostrar información de CODEOWNERS al pasar el cursor sobre archivos en el explorador.",
+  "Team": "Equipo",
+  "User": "Usuario"
 }
