--- a/l10n/bundle.l10n.it.json
+++ b/l10n/bundle.l10n.it.json
@@ -71,5 +71,7 @@
   "No CODEOWNERS file found in this workspace. [Create one](command:codeownersTeams.createCodeownersFile) or [learn more](command:codeownersTeams.openCodeownersDocs).": "Nessun file CODEOWNERS trovato in questo workspace. [Creane uno](command:codeownersTeams.createCodeownersFile) o [scopri di più](command:codeownersTeams.openCodeownersDocs).",
   "List of team names that should be pinned to the top of the CODEOWNERS teams view.": "Lista dei nomi dei team che dovrebbero essere fissati in cima alla vista team CODEOWNERS.",
   "Show CODEOWNERS information in the status bar for the currently open file.": "Mostra informazioni CODEOWNERS nella barra di stato per il file attualmente aperto.",
-  "Show CODEOWNERS information when hovering over files in the explorer.": "Mostra informazioni CODEOWNERS quando si passa sopra i file nell'explorer."
+  "Show CODEOWNERS information when hovering over files in the explorer.": "Mostra informazioni CODEOWNERS quando si passa sopra i file nell'explorer.",
+  "Team": "Squadra",
+  "User": "Utente"
 }
