--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -71,5 +71,7 @@
   "No CODEOWNERS file found in this workspace. [Create one](command:codeownersTeams.createCodeownersFile) or [learn more](command:codeownersTeams.openCodeownersDocs).": "No CODEOWNERS file found in this workspace. [Create one](command:codeownersTeams.createCodeownersFile) or [learn more](command:codeownersTeams.openCodeownersDocs).",
   "List of team names that should be pinned to the top of the CODEOWNERS teams view.": "List of team names that should be pinned to the top of the CODEOWNERS teams view.",
   "Show CODEOWNERS information in the status bar for the currently open file.": "Show CODEOWNERS information in the status bar for the currently open file.",
-  "Show CODEOWNERS information when hovering over files in the explorer.": "Show CODEOWNERS information when hovering over files in the explorer."
+  "Show CODEOWNERS information when hovering over files in the explorer.": "Show CODEOWNERS information when hovering over files in the explorer.",
+  "Team": "Team",
+  "User": "User"
 }
