Fixed issue where special characters were not being correctly highlighted.

--- a/languages/codeowners.language-configuration.json
+++ b/languages/codeowners.language-configuration.json
@@ -14,5 +14,5 @@
     ["\"", "\""],
     ["[", "]"]
   ],
-  "wordPattern": "(-?\\d*\\.\\d+\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
+  "wordPattern": "(-?\\d*\\.\\d+\\w*)|([^\\`\\~\\!\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
 }
